[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprite/ennemies/Enemy01_Green_Frame_1_png_processed.png" type="Texture" id=1]
[ext_resource path="res://entities/enemy/Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 20 )

[node name="Enemy" type="Area2D"]
rotation = 1.5708
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="ShootingPoint" type="Position2D" parent="."]
position = Vector2( -1.68352, 47.1433 )
[connection signal="area_shape_entered" from="." to="." method="_on_Enemy_area_shape_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_Enemy_body_shape_entered"]
[connection signal="timeout" from="FireRateTimer" to="." method="_on_FireRateTimer_timeout"]
